[gd_scene load_steps=10 format=3 uid="uid://736mkfdvqo8"]

[ext_resource type="Script" path="res://scenes/interface_base/battlesim/heroes/bully_heroes_basic/bully_heroes_basic.gd" id="1_2c2vv"]
[ext_resource type="Texture2D" uid="uid://df11rwqd2srmf" path="res://assets/art/characters/bullies/Bruce.png" id="2_2ahtd"]
[ext_resource type="PackedScene" uid="uid://bsqfqqlswcbnk" path="res://scenes/interface_base/battlesim/utility/health_bar/health_bar.tscn" id="2_t82pm"]
[ext_resource type="Shader" path="res://effects/white_flash_material.gdshader" id="2_v8ra1"]
[ext_resource type="PackedScene" uid="uid://deh2disexwroh" path="res://scenes/state_machines/state_machine.tscn" id="4_yqpm1"]
[ext_resource type="PackedScene" uid="uid://dd1mo5s2pcwkg" path="res://scenes/state_machines/lane_state_machine.tscn" id="5_fmquj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ittlf"]
shader = ExtResource("2_v8ra1")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = null

[sub_resource type="CircleShape2D" id="CircleShape2D_wayp2"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xq6u3"]
radius = 70.0

[node name="BullyHeroesBasic" type="CharacterBody2D" groups=["bully", "restart_map"]]
collision_layer = 16
collision_mask = 0
script = ExtResource("1_2c2vv")
_att_speed = 0.5

[node name="NavAgent" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
radius = 5.0

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_ittlf")
scale = Vector2(0.075, 0.075)
texture = ExtResource("2_2ahtd")

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wayp2")

[node name="HealthBar" parent="." instance=ExtResource("2_t82pm")]
unique_name_in_owner = true
offset_left = -25.0
offset_top = -50.0
offset_right = 25.0
offset_bottom = -43.0

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_xq6u3")

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state", "hero", "nav_agent") instance=ExtResource("4_yqpm1")]
unique_name_in_owner = true
initial_state = NodePath("Defensive")
hero = NodePath("..")
nav_agent = NodePath("../NavAgent")

[node name="LaneStateMachine" parent="." instance=ExtResource("5_fmquj")]
unique_name_in_owner = true

[node name="Utility" type="Node" parent="."]

[node name="AttTimer" type="Timer" parent="Utility"]
unique_name_in_owner = true

[node name="RespawnTimer" type="Timer" parent="Utility"]
unique_name_in_owner = true
one_shot = true

[connection signal="died" from="HealthBar" to="." method="_on_health_bar_died"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="timeout" from="Utility/AttTimer" to="." method="_on_att_timer_timeout"]
[connection signal="timeout" from="Utility/RespawnTimer" to="." method="_on_respawn_timer_timeout"]

[editable path="StateMachine"]
[editable path="LaneStateMachine"]
